--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
                     <p><small class="small-texts">Computer-controlled digital transistorized with electronic
                             advance</small> </p>
                     <h1 class="honda-cbr-heading">Honda CBR 300R</h1>
-                    <p class="honda-cbr-texts font-weight-normal text-justify">Honda Bike is shera bike Amet minim mollit non deserunt
+                    <p class="honda-cbr-texts font-weight-normal text-justify">Honda Bike is shera bike Amet minim
+                        mollit non deserunt
                         ullamco est sit aliqua
                         dolor do amet sint. Velit officia consequat duis enim velit
                         mollit. Exercitation veniam consequat sunt nostrud amet.</p>
@@ -211,8 +212,9 @@
                             <h2 class="accordion-header" id="headingOne">
                                 <button class="accordion-button" type="button" data-bs-toggle="collapse"
                                     data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                    What are the most important things I should
-                                    know about riding a bike?
+                                    <strong>What are the most important things I should
+                                        know about riding a bike?</strong>
+
                                 </button>
                             </h2>
                             <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
@@ -229,8 +231,9 @@
                             <h2 class="accordion-header" id="headingTwo">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                     data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                    How can I tell if my helmet is old and I need a
-                                    new one?
+                                    <strong>How can I tell if my helmet is old and I need a
+                                        new one?</strong>
+
                                 </button>
                             </h2>
                             <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
@@ -247,7 +250,8 @@
                             <h2 class="accordion-header" id="headingThree">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                     data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                    My bike has been in storage is it safe to ride?
+                                    <strong>My bike has been in storage is it safe to ride?</strong>
+
                                 </button>
                             </h2>
                             <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
@@ -260,13 +264,14 @@
                             </div>
                         </div>
                         <div class="accordion-item border border-2">
-                            <h2 class="accordion-header" id="headingThree">
+                            <h2 class="accordion-header" id="headingFour">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                    What rules should I follow when riding my bike?
+                                    data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                                    <strong>What rules should I follow when riding my bike?</strong>
+
                                 </button>
                             </h2>
-                            <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                            <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingThree"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
                                     <strong> When riding, always:</strong> <br>
@@ -352,7 +357,8 @@
     </main>
     <footer class="conatiner bg-dark mt-5 mb-0 p-5">
         <p class="text-white text-center">Copyright © 2021 Shilpiony Inc. All rights reserved.</p>
-        <p class="text-white text-center"><small>Developed By <span class="orange-text">SK IMRAN SABUJ</span> </small></p>
+        <p class="text-white text-center"><small>Developed By <span class="orange-text">SK IMRAN SABUJ</span> </small>
+        </p>
     </footer>
 
     <!-- JavaScript Documantation  -->
