--- a/index.html
+++ b/index.html
@@ -135,10 +135,8 @@
                     <div class="card p-4 text-center">
                         <img src="images/user-1.png" class="card-img-top img-fluid w-75 mx-auto" alt="...">
                         <div class="card-body">
-                            <p class="card-text">Slate helps you see how
-                                many more days you need
-                                to work to reach your financial
-                                goal for the month and year.</p>
+                            <p class="card-text">At the Department I am a caseworker and administer the Family
+                                Educational Rights and Privacy Act (FERPA).</p>
                             <div class="star-icons mb-3">
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
@@ -155,10 +153,7 @@
                     <div class="card p-4 text-center">
                         <img src="images/user-2.png" class="card-img-top img-fluid w-75 mx-auto" alt="...">
                         <div class="card-body">
-                            <p class="card-text">Slate helps you see how
-                                many more days you need
-                                to work to reach your financial
-                                goal for the month and year.</p>
+                            <p class="card-text">Li Ziqi, is a Chinese video blogger, entrepreneur, and Internet celebrity. She is known for creating food and handicraft preparation.</p>
                             <div class="star-icons mb-3">
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
@@ -166,8 +161,8 @@
                                 <i class="fas fa-star"></i>
                                 <i class="far fa-star"></i>
                             </div>
-                            <p class="client-name text-primary">Regina Miles</p>
-                            <p class="client-job">Banker</p>
+                            <p class="client-name text-primary">Li Ziqi</p>
+                            <p class="client-job">Video blogger</p>
                         </div>
                     </div>
                 </div>
@@ -176,10 +171,7 @@
                         <img src="images/user-3.jpg" class="card-img-top rounded rounded-circle  img-fluid w-75 mx-auto"
                             alt="...">
                         <div class="card-body">
-                            <p class="card-text">Slate helps you see how
-                                many more days you need
-                                to work to reach your financial
-                                goal for the month and year.</p>
+                            <p class="card-text">First Lady Michelle Obama, initially titled Michelle LaVaughn Robinson Obama, is a portrait of former First Lady.</p>
                             <div class="star-icons mb-3">
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
@@ -187,8 +179,8 @@
                                 <i class="fas fa-star"></i>
                                 <i class="far fa-star"></i>
                             </div>
-                            <p class="client-name text-primary">Regina Miles</p>
-                            <p class="client-job">Banker</p>
+                            <p class="client-name text-primary">Michelle Obama</p>
+                            <p class="client-job">First Lady</p>
                         </div>
                     </div>
                 </div>
